--- a/GetWebResources/MainWindow.xaml
+++ b/GetWebResources/MainWindow.xaml
@@ -1,23 +1,20 @@
 ﻿<Window x:Class="GetWebResources.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GetWebResources"
-        xmlns:cefSharp="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
-        
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:cefSharp="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Normal"
         TextElement.FontSize="13"
-        TextOptions.TextFormattingMode="Ideal" 
-        TextOptions.TextRenderingMode="Auto"        
+        TextOptions.TextFormattingMode="Ideal"
+        TextOptions.TextRenderingMode="Auto"
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
-        
+
         mc:Ignorable="d"
-        Title="一键获取Web资源" Width="1290" Height="672"  
-         >
+        Title="一键获取Web资源" Width="1290" Height="672">
     <Grid>
 
         <Grid>
@@ -27,22 +24,31 @@
                 <RowDefinition Height="40"></RowDefinition>
             </Grid.RowDefinitions>
 
-            <Border Grid.Row="0" BorderBrush="Red" BorderThickness="0,0,0,1" Margin="0,0" Background="White" >
-                <StackPanel Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,5" >
+            <Border Grid.Row="0" BorderBrush="Red" BorderThickness="0,0,0,1" Margin="0,0" Background="White">
+                <StackPanel Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,5">
                     <CheckBox Margin="10,0,0,0" Name="CheckBoxOpenHostFilter" Content="打开Host筛选" VerticalAlignment="Center" Checked="CheckBoxOpenHostFilter_Checked" Unchecked="CheckBoxOpenHostFilter_Unchecked" />
-                    <TextBox Margin="10,0,0,0"  Name="TextBoxWebUrl" Text="" Width="auto" MinWidth="150"  MaxWidth="400"  VerticalAlignment="Center"  />
-                    <Button Margin="10,0,0,0" Name="BtnLoad" Content="加载 / 刷新" Click="BtnLoad_Click" />
+                    <TextBox Margin="10,0,0,0"  Name="TextBoxWebUrl" Text="" Width="auto" MinWidth="150"  MaxWidth="400"  VerticalAlignment="Center" />
+
+                    <Button
+                       Click="BtnLoad_Click"
+                        Style="{StaticResource MaterialDesignRaisedButton}"
+                        materialDesign:ButtonProgressAssist.Value="-1"
+                        materialDesign:ButtonProgressAssist.IsIndicatorVisible="True"
+                        materialDesign:ButtonProgressAssist.IsIndeterminate="True"
+                        Content="加载 / 刷新"
+                        Margin="2,0"
+                        IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}" />
 
                     <Button Margin="10,0,0,0" Name="BtnGetResources" Content="获取资源"  Click="BtnGetResources_Click" />
                     <Label Margin="10,0,0,0"   Content="资源数: " VerticalAlignment="Center" ></Label>
-                    <Label Margin="0,0,0,0"  Name="LableResourcesCount" Content="0" VerticalAlignment="Center"/>
+                    <Label Margin="0,0,0,0"  Name="LableResourcesCount" Content="0" VerticalAlignment="Center" />
                     <Button Margin="10,0,0,0" Name="BtnOpenConfig" Content="打开设置目录"  Click="BtnOpenConfig_Click" />
                     <Button Margin="10,0,0,0" Name="BtnCheckCore" Content="浏览器内核检测"  Click="BtnCheckCore_Click" />
                     <ComboBox Margin="10,0,0,0" Name="ComboBoxHistory" Width="200" />
-
                 </StackPanel>
             </Border>
-            <cefSharp:ChromiumWebBrowser  Grid.Row="1" x:Name="Web" Margin="0,5,0,5"  />
+
+            <cefSharp:ChromiumWebBrowser  Grid.Row="1" x:Name="Web" Margin="0,5,0,5" />
 
             <Border Grid.Row="2" BorderBrush="Red" BorderThickness="0,1,1,0" Background="White" Width="auto" HorizontalAlignment="Left">
                 <Label Name="LabelTip" FontSize="20"   Content="😀 加载对应的地址,加载完成后,点击获取资源.." Foreground="#FFFF0404">
